# ChangeLog for media-libs/t1lib
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/t1lib/ChangeLog,v 1.69 2008/05/04 15:11:50 pva Exp $

*t1lib-5.1.2 (04 May 2008)

  04 May 2008; Peter Volkov <pva@gentoo.org>
  +files/t1lib-do-not-install-t1lib_doc.patch, +t1lib-5.1.2.ebuild:
  Version bump, bug #214010 reported by Craig; fixed installation of docs
  into /etc, bug #216778 reported by Jens Rutschmann.

  08 Dec 2007; Ryan Hill <dirtyepic@gentoo.org> -t1lib-1.3.1.ebuild:
  Remove old vulnerable version (bug #198053).

  15 Oct 2007; Alexis Ballier <aballier@gentoo.org> t1lib-5.0.2.ebuild,
  t1lib-5.0.2-r1.ebuild, t1lib-5.1.1.ebuild:
  virtual/tetex -> virtual/latex-base, bug #195894

  05 Oct 2007; Ryan Hill <dirtyepic@gentoo.org>
  +files/t1lib-5.1.1-parallel.patch, t1lib-5.1.1.ebuild:
  Fix parallel build for bug #194720.

  27 Sep 2007; Hanno Boeck <hanno@gentoo.org> +files/t1lib-5.1.1-qa.diff,
  t1lib-5.1.1.ebuild:
  QA: Fix compile warnings.

  26 Sep 2007; Christoph Mende <angelos@gentoo.org> t1lib-5.0.2-r1.ebuild,
  t1lib-5.1.1.ebuild:
  Fixed amd64 keywords

  26 Sep 2007; Christoph Mende <angelos@gentoo.org> t1lib-5.1.1.ebuild:
  Stable on amd64 wrt security bug #193437

  25 Sep 2007; Fabian Groffen <grobian@gentoo.org> t1lib-5.0.2.ebuild,
  t1lib-5.0.2-r1.ebuild, t1lib-5.1.1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  25 Sep 2007; Raúl Porcel <armin76@gentoo.org> t1lib-5.0.2-r1.ebuild:
  sparc stable wrt security #193437

  25 Sep 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  t1lib-5.0.2-r1.ebuild:
  ppc stable, bug #193437

  24 Sep 2007; Markus Rothe <corsair@gentoo.org> t1lib-5.0.2-r1.ebuild:
  Stable on ppc64; bug #193437

  23 Sep 2007; Raúl Porcel <armin76@gentoo.org> t1lib-5.0.2-r1.ebuild:
  alpha/ia64 stable wrt security #193143

  23 Sep 2007; Jeroen Roovers <jer@gentoo.org> ChangeLog:
  Stable for HPPA (bug #193437).
